force-app/main/default/objects/ProductCategoryProduct_bkcr_prd__dll/fields/classification__c.field-meta.xml
<CustomField>
    <fullName>classification__c</fullName>
    <label>classification</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>classification</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>