force-app/main/default/objects/ProductCategoryProduct_bkcr_prd__dll/fields/KQ_unique_productCategoryId__c.field-meta.xml
<CustomField>
    <fullName>KQ_unique_productCategoryId__c</fullName>
    <label>KQ_unique_productCategoryId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_unique_productCategoryId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>