force-app/main/default/objects/ProductCategoryProduct_bkcr_prd__dll/fields/primary__c.field-meta.xml
<CustomField>
    <fullName>primary__c</fullName>
    <label>primary</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>primary</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>