force-app/main/default/objects/ProductCategoryProduct_bkcr_prd__dll/fields/productCategoryId__c.field-meta.xml
<CustomField>
    <fullName>productCategoryId__c</fullName>
    <label>productCategoryId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>productCategoryId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>